--- a/src/app/components/navbar/navbar.less
+++ b/src/app/components/navbar/navbar.less
@@ -1,3 +1,15 @@
 .acme-navbar-text {
   color: white;
 }
+
+.scroll {
+	-webkit-transition: all 200ms ease;
+	-moz-transition: all 200ms ease;
+	-o-transition:  all 200ms ease;
+	transition: all 200ms ease;
+	opacity: 1;
+}
+.min {
+	bottom: -35px;
+	opacity: 0.8;
+}
