Add detail page

--- a/src/app/main/main.html
+++ b/src/app/main/main.html
@@ -24,7 +24,7 @@
       <div class="grid-sizer col-xs-1 col-sm-1 col-md-1">1</div>
       <div class="grid-item col-xs-12 col-sm-6 col-md-4">
         <!-- add inner element for column content -->
-        <div class="grid-item-content">2</div>
+        <div class="grid-item-content">2<a ui-sref="detail">About</a></div>
       </div>
       <div class="grid-item col-xs-12 col-sm-6 col-md-4">
         <div class="grid-item-content"></div>
