--- a/src/app/index.less
+++ b/src/app/index.less
@@ -27,6 +27,11 @@
   }
 }
 
+.no-padding {
+	padding: 0;
+	overflow-x: hidden;
+}
+
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your less files automatically
