--- a/src/app/components/navbar/navbar.html
+++ b/src/app/components/navbar/navbar.html
@@ -1,8 +1,11 @@
 <nav navscroll ng-class="{min:boolChangeClass}" class="navbar navbar-fixed-bottom navbar-inverse scroll">
+  <div class="navbar-action">
+    <action-button actions="vm.actions" hide-button="boolChangeClass"></action-button>
+  </div>
   <div class="container-fluid">
     <div class="navbar-header">
       <a class="navbar-brand" href="https://github.com/Swiip/generator-gulp-angular">
-        <span class="glyphicon glyphicon-home"></span> Gulp Angular
+        <!--<span class="glyphicon glyphicon-home"></span> Gulp Angular-->
       </a>
     </div>
 
