Change masonry directive

--- a/src/app/index.less
+++ b/src/app/index.less
@@ -32,6 +32,10 @@
 	overflow-x: hidden;
 }
 
+[ng\:cloak], [ng-cloak], [data-ng-cloak], [x-ng-cloak], .ng-cloak, .x-ng-cloak {
+  display: none !important;
+}
+
 /**
  *  Do not remove the comments below. It's the markers used by gulp-inject to inject
  *  all your less files automatically
