--- a/src/app/main/main.less
+++ b/src/app/main/main.less
@@ -5,12 +5,20 @@
     border-radius: 5px;
   }
 
-  .grid-item-content--height2 { height: 200px; }
-  .grid-item {
-    padding:0 15px;
-    margin-bottom: 10px;
-  }
+.grid-item-content--height2 { height: 200px; }
+.grid-item-content--height4 { height: 400px; }
+.grid-item {
+  padding:0 15px;
+  margin-bottom: 10px;
+}
 
+.hide-scrollbar::-webkit-scrollbar { 
+    display: none; 
+}
+
+.loaded {
+
+}
 
 .page-main.ng-enter, .page-main.ng-leave {
   position: absolute;
