Fix css comment

--- a/src/app/components/actionButton/actionButton.less
+++ b/src/app/components/actionButton/actionButton.less
@@ -32,7 +32,7 @@
 }
 
 .action-toggle-button {
-	--background: transparent;
+	/*background: transparent;*/
 	position: absolute;
 	top: 0;
 	left: 0;
